Changelog for Great-Real-Estate

v1.1.1
[2008-07-30] created 1.1.1 tag.
[2008-07-30] BUGFIX: css/listings.css update did not get included in 1.1, was
needed for other Google Map changes. 

v1.1
[2008-07-27] created 1.1 tag and set repository stable tag to 1.1. Trunk will
now contain unreleased updates, tagged directory will contain official
release.
[2008-07-27] CHANGE: updated to support WP2.6 feature - relocation of wp-content
directory
[2008-07-27] CHANGE: updated localization files and correct code to initialize
[2008-07-27] BUGFIX: corrected "garage spaces" string.
[2008-07-27] BUGFIX: escaped strings in Google Maps popup to avoid JS errors
[2008-07-27] BUGFIX: added tabindex to edit form

v1.02 
[2008-07-21] BUGFIX: to address edit problems that could occur if a main
listing page is not defined.
[2008-07-21] FEATURE: added Italian translations

v1.01 
[2008-06-27] FEATURE; added map option to show_listings_featured()
(call with type="map" to generate output, requires XML feed below)
- added get_listings_featured() for filterable output
- added feed template file feed-googlemaps.php
[2008-06-27] FEATURE: added shortcode handler for featured listings block
- [featured-listings max="5",sort="random",type="basic",head="Featured"]
will output a list with thumbnails in random order, 5 listings
- [featured-listings type="map",head="All Listings"]
will output a map of all active and sold listings ie all listings appearing
in your googlemaps RSS feed
[2008-06-27] CHANGE: changed map_canvas id to gre_map_canvas to reduce conflicts,
changed some other variable names in JavaScript to avoid conflicts

----------------------------------------------------------------------------
v1.0 (initial release)
